--- a/starter_kit/templates/starter_kit/uploadform.html
+++ b/starter_kit/templates/starter_kit/uploadform.html
@@ -14,23 +14,17 @@
 <ul class="messages">
     {% for message in messages %}
     <li {% if message.tags %} class="{{ message.tags }}"{% endif %} style="color:red">{{ message }}</li>
-    <li {% if message.tags %} class="{{ message.tags }}"{% endif %} style="color:red">ENSURE THE FILE UPLOADED IS STRICTLY A .png FILE WITH DIMENSIONS 240X1200</li>
     {% endfor %}
 </ul>
 {% endif %}
 
-             <h4>Image Analysis Request Upload Form</h4>
+             <h4>Upload Form</h4>
 
              <img style="width:120px;height:120px;margin-left:300px" src="{% static 'logo1.png' %}"/>
          <form role="form" enctype="multipart/form-data" method="POST" action="">{% csrf_token %}
 
                                             <div class="form-group">
-                                                {% for field in fillform %}
-                                                <label for="field.id_for_label">{{field.html_name}}</label>
-                                                {{ field.non_field_errors }}
-                                                {{ field|add_class:"form-control border-input"}}
-                                                <br/>
-                                        {% endfor %}
+
                                            </div>
                     <div class="col s12 right-align">
                         <button class="btn btn-info btn-fill btn-wd" type="submit">Submit</button>
