add forms.py and create super user

--- a/starter_kit/templates/starter_kit/index.html
+++ b/starter_kit/templates/starter_kit/index.html
@@ -92,12 +92,8 @@
 
              <img style="width:120px;height:120px" src="{% static 'logo1.png' %}"/></center>
              <p>
-                 KEEN EYE is a web based medical imaging processor that runs on top of a deep
-                 learning model. This facilitates the concept of tele radiology by allowing clinicians
-                 and medical practitioners to upload medical imaging scans which are submitted to a state of the art
-                 deep learning model/Algorithim which predicts, with high accuracy, the onset or presence of an abonormality
-                 in the images. Keen eye aims to alleviate the current pressure on radiologists to deliver stellar results
-                 despite their shortage and high demand. With this platform, the through put is set to be higher and thus, serve a larger populace.
+                 KEEN EYE is a web based django-saas boilerplate template complete with Razorpay Payments.
+                 The sample app used is a Bio-Medical startup that charges for processing of chest x rays to Identify pneumonia
              </p>
              </div>
      </div>
