--- a/starter_kit/templates/starter_kit/uploadform.html
+++ b/starter_kit/templates/starter_kit/uploadform.html
@@ -22,6 +22,23 @@
              <h4>Image Analysis Request Upload Form</h4>
 
              <img style="width:120px;height:120px;margin-left:300px" src="{% static 'logo1.png' %}"/>
+              <form action="charge" method="POST">
+        <script
+            src="https://checkout.razorpay.com/v1/checkout.js"
+            data-key="rzp_test_WyK93y9mvps7SN"
+            data-amount="5100"
+            data-name="Test-Client"
+            data-description="Pay for image analysis"
+            data-image="vk.jpg"
+            data-netbanking="true"
+            data-description="Tron Legacy"
+            data-prefill.name="Client 001"
+            data-prefill.email="client001@razorpay.com"
+            data-prefill.contact="254-741-855-789"
+            data-notes.shopping_order_id="21">
+        </script>
+        <input type="hidden" name="shopping_order_id" value="21">
+    </form>
          <form role="form" enctype="multipart/form-data" method="POST" action="">{% csrf_token %}
 
                                             <div class="form-group">
