add default user

--- a/starter_kit/templates/starter_kit/index.html
+++ b/starter_kit/templates/starter_kit/index.html
@@ -69,9 +69,9 @@
                                             <div class="form-group">
                                                 <form method="POST" action="">
 
-                                                <p>Enter username</p>
+                                                    <p>Enter username <i>Default username app-user</i></p>
                                                <input type="text" name="uname" class="form-control" required style="border: solid 1px #66615b "/>
-                                               <p>Enter password</p>
+                                                    <p>Enter password <i>Default password django-saas</i></p>
                                                <input type="password" name="password" class="form-control" required style="border: solid 1px #66615b " />
                                                 <button class="btn btn-info btn-fill btn-wd" type="submit">Submit</button>
                                                 <button class="btn btn-info btn-fill btn-wd" type="reset">Reset</button>
